# simple-keenetic-client

./: .flake8  LICENSE  README.md  pyproject.toml
src/simple_keenetic_client/: __init__.py
tests/: fixtures.py  test_basic.py
